installed django-location and configured it

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,25 @@
+certifi==2017.11.5
+chardet==3.0.4
+confusable-homoglyphs==2.0.2
 Django==1.11.7
 django-bootstrap3==9.1.0
 django-decouple==2.1
-psycopg2==2.7.3.2
-pytz==2017.3
-whitenoise==3.3.1
+django-location==2.1.1
+django-mailbox==4.6.0
 django-registration==2.3
+django-social-auth==0.7.28
+httplib2==0.10.3
+idna==2.6
+jsonfield==2.0.2
+lxml==4.1.1
+oauth2==1.9.0.post1
+olefile==0.44
 Pillow==4.3.0
+psycopg2==2.7.3.2
+pyicloud-dwoh==0.4.1
+python-openid==2.2.5
+pytz==2017.3
+requests==2.18.4
+six==1.11.0
+urllib3==1.22
+whitenoise==3.3.1
