deployment to heroku

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,12 @@ dj-database-url==0.4.2
 Django==1.11.7
 django-bootstrap3==9.1.0
 django-decouple==2.1
+django-geoposition==0.3.0
+django-location-field==2.0.3
 django-mailbox==4.6.0
 django-registration==2.3
 django-social-auth==0.7.28
+gunicorn==19.7.1
 httplib2==0.10.3
 idna==2.6
 jsonfield==2.0.2
@@ -15,6 +18,7 @@ lxml==4.1.1
 oauth2==1.9.0.post1
 olefile==0.44
 Pillow==4.3.0
+pkg-resources==0.0.0
 psycopg2==2.7.3.2
 pyicloud-dwoh==0.4.1
 python-openid==2.2.5
